update devops script